test(fixtures): harden 1.1.0 diagnostic verification